# ResponsibleAI

./: README.md  requirements.txt
.cursor/rules/: global_rule.mdc
cardd_data/: README.md  cleanup_failed_metadata.py  config.py  dataloader.py  manipulate.py  manipulation_tools.py  manipulator.py  pyproject.toml  setup_uv.sh  visualize.py
detection_car/: README.md  data_loader.py  eval.py  interpret.py  models.py  pyproject.toml  train_nn.py  train_sk.py  utils.py
detection_car/models/model_20250917_152941/: results.txt
detection_car/models/model_20250917_161302/: results.txt
detection_car/models/model_20251006_172724/: results.txt
domain_adapt/: README.md  eval_dann.py  model_dann.py  train_dann.py
domain_adapt/models/model_dann_20251027_212405/: evaluation_results.json  metadata.json
domain_adapt/models/model_dann_20251028_075323/: metadata.json
domain_adapt/models/model_dann_20251028_122535/: evaluation_results.json  metadata.json
ec2_scripts/: README.md  connect_existing.sh  download_results.sh  ec2_config.sh  monitor_training.sh  setup_ec2.sh  sync_to_ec2.sh  train_on_ec2.sh
interpret_cnn/: filters.py  gradcam_analyze.py  neuron_analyze.py  utils.py
interpret_cnn/gradcam_app/: README.md  app.py  requirements.txt  run.sh
interpret_cnn/gradcam_app/templates/: index.html
interpret_func/: interpret.py  model_interpretation.json
interpret_func/interpret_tools/: interpret_linear.py
model_server/: README.md  model.py  run.sh  server.py
simple_detect_car/: data_loader.py  eval.py  list_models.py  train_nn.py  train_sk.py
(+9 files in other folders)
